--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "homepage": "https://fadhillarayes.github.io/tugas-react-github/"
+    "homepage": "http://fadhillarayes.github.io/tugas-react-github/"
 
   },
   "scripts": {
